--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <div class="container">
             <div class="cv_wrap">
                 <header>
-                    <div class="cv_title">
-                        <h1>Lysenko <span>Ivan</span></h1>
-                        <div class="profi_title">Manager Marketer</div>
-                    </div>
+                    <h1>Lysenko <span>Ivan</span></h1>
+                    <span class="profi_title">Manager Marketer</span>
                 </header>
                 <section class="contacts_section">
                     <div class="cv_contact">
@@ -44,73 +42,71 @@
                     </div>
                 </section>
                 <section class="contents_section">
-                    <div class="cv_content">
-                        <div class="content_left">
-                            <div class="content_item">
-                                <div class="content_title">Profile</div>
-                                <div class="content_text">
-                                    <div class="content_text_text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta enim dolor libero dolorum temporibus ipsam accusamus velit inventore perspiciatis reprehenderit quidem, facilis quo exercitationem? Quisquam earum aliquid adipisci voluptates dolorem obcaecati corrupti unde, sed praesentium ut doloremque exercitationem nesciunt ipsam molestias dolor dignissimos iste! Maiores laudantium facere animi quisquam repellendus.
-                                    </div>
-                                </div>
+                    <div class="content_left">
+                        <div class="content_item">
+                            <h2 class="content_title">Profile</h2>
+                            <div class="content_text">
+                                <p class="content_text_text">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta enim dolor libero dolorum temporibus ipsam accusamus velit inventore perspiciatis reprehenderit quidem, facilis quo exercitationem? Quisquam earum aliquid adipisci voluptates dolorem obcaecati corrupti unde, sed praesentium ut doloremque exercitationem nesciunt ipsam molestias dolor dignissimos iste! Maiores laudantium facere animi quisquam repellendus.
+                                </p>
                             </div>
-                            <div class="content_item">
-                                <div class="content_title">Education</div>
-                                <div class="content_text">
-                                    <div class="content_text_title">Specialist degree</div>
-                                    <div class="content_text_subtitle">National Pharmaceutical University / 2014 - 2019</div>
-                                    <div class="content_text_text">
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem cum esse, sed ipsam iure dolore officiis at, tempora quos recusandae, nobis incidunt dignissimos dolores. Sapiente minus inventore quos incidunt .
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="content_item">
+                            <h2 class="content_title">Education</h2>
+                            <div class="content_text">
+                                <h3 class="content_text_title">Specialist degree</h3>
+                                <span class="content_text_subtitle">National Pharmaceutical University / 2014 - 2019</span>
+                                <p class="content_text_text">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem cum esse, sed ipsam iure dolore officiis at, tempora quos recusandae, nobis incidunt dignissimos dolores. Sapiente minus inventore quos incidunt .
+                                </p>
                             </div>
-                            <div class="content_item">
-                                <div class="content_title">Languages</div>
-                                <div class="content_text">
-                                    <div class="languages_items">
-                                        <div class="languages_item">
-                                            <span class="title">English</span>
-                                            <span class="value">Native Speaker</span>
-                                        </div>
-                                        <div class="languages_item">
-                                            <span class="title">Italian</span>
-                                            <span class="value">Fluent</span>
-                                        </div>
+                        </div>
+                        <div class="content_item">
+                            <h2 class="content_title">Languages</h2>
+                            <div class="content_text">
+                                <div class="languages_items">
+                                    <div class="languages_item">
+                                        <span class="title">English</span>
+                                        <span class="value">Native Speaker</span>
+                                    </div>
+                                    <div class="languages_item">
+                                        <span class="title">Italian</span>
+                                        <span class="value">Fluent</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="content_right">
-                            <div class="content_item">
-                                <div class="content_title">Work Experience</div>
-                                <div class="content_text">
-                                    <div class="content_text_title">Foreman</div>
-                                    <div class="content_text_subtitle">Pharmaceutical company «Zdorovye» / 2019 – 2021</div>
-                                    <div class="content_text_text">
-                                        Area of activity
-                                        <ul>
-                                            <li>• Production site management</li>
-                                            <li>• Fulfillment of production assignments by the site on time</li>
-                                            <li>• Coordination of the activities of work teams, checking the quality of work performed</li>
-                                            <li>• Compliance with technological processes</li>
-                                            <li>• Working with API (registration of raw materials acceptance, calculation of raw materials loading for the production of industrial series)</li>
-                                            <li>• Work with documentation of production sites</li>
-                                        </ul>
-                                    </div>
+                    </div>
+                    <div class="content_right">
+                        <div class="content_item">
+                            <h2 class="content_title">Work Experience</h2>
+                            <div class="content_text">
+                                <h3 class="content_text_title">Foreman</h3>
+                                <span class="content_text_subtitle">Pharmaceutical company «Zdorovye» / 2019 – 2021</span>
+                                <div class="content_text_text">
+                                    Area of activity
+                                    <ul class="text_list">
+                                        <li>Production site management</li>
+                                        <li>Fulfillment of production assignments by the site on time</li>
+                                        <li>Coordination of the activities of work teams, checking the quality of work performed</li>
+                                        <li>Compliance with technological processes</li>
+                                        <li>Working with API (registration of raw materials acceptance, calculation of raw materials loading for the production of industrial series)</li>
+                                        <li>Work with documentation of production sites</li>
+                                    </ul>
                                 </div>
                             </div>
-                            <div class="content_item">
-                                <div class="content_title">Personal Skills</div>
-                                <div class="content_text">
-                                    <div class="content_text_text">
-                                        <ul class="skills">
-                                            <li>Community Focused</li>
-                                            <li>Motivated</li>
-                                            <li>Professional</li>
-                                            <li>Fast Learner</li>
-                                            <li>Creative Spirit</li>
-                                        </ul>
-                                    </div>
+                        </div>
+                        <div class="content_item">
+                            <h2 class="content_title">Personal Skills</h2>
+                            <div class="content_text">
+                                <div class="content_text_text">
+                                    <ul class="skills">
+                                        <li>Community Focused</li>
+                                        <li>Motivated</li>
+                                        <li>Professional</li>
+                                        <li>Fast Learner</li>
+                                        <li>Creative Spirit</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
